# tf_gnns

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: docs-pages.yml  release-pypi.yml  release-testpypi.yml  tests.yml
benchmarks/: README.md  __init__.py
benchmarks/ogbg_molhiv/: RESULTS.md  __init__.py  common.py  data.py  run_suite.py  run_tfgnns_backend.py  train_dgl.py  train_pyg.py  train_tf_gnns.py
docs/: conf.py  index.rst
ibk_gnns/: __init__.py  graphnet_utils.py  minigraphnets.py  test.py  utils.py  utils_train.py
notebooks/: 01_tf_gnn_basics.ipynb  02_list_sorting.ipynb  03_ProteinProteinInteraction_MPNN.ipynb  04_keras3_torch_backend_graphnet.ipynb  06_gcn_ogbn_arxiv_tfgnns.ipynb  benchmark_ogbg_molhiv_tfgnns_vs_pyg_vs_dgl.ipynb  benchmark_sparse_gcn_keras_vs_tf.ipynb
scripts/: check_gpu_frameworks.py  install_DGL  install_dgl.py  optuna_gcn_ogbn_arxiv.py  run_coverage.sh  run_docs_build.sh  run_docstring_lint.sh  run_tf_matrix_tests.sh  run_with_tf_gpu  update_coverage_badge.py
tests/: test_backend_agnostic_models.py  test_backend_ops.py  test_datastructures.py  test_graphnet_utils.py  test_gt_ops.py  test_jax_compiled_diagnostics.py  test_models_gcn.py  test_models_graphnet.py  test_mpnn_backend_smoke.py  test_mpnn_benchmark_runner_smoke.py  test_notebook_torch_backend_flow.py  test_runtime_cuda_path.py  test_torch_backend_runtime.py
tf_gnns/: .graphnet_utils.py.swo  README.md  __init__.py  backend_ops.py  datastructures.py  graphnet_utils.py  tfgnns_datastructures.py  utils.py
(+28 files in other folders)
