[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "tf_gnns"
version = "0.2.0"
description = "A hackable TensorFlow GraphNets library"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9,<3.14"
dependencies = [
  "numpy>=1.0",
  "tensorflow>=2.15",
  "tensorflow_probability>=0.22",
  "tf_keras>=2.15",
]

[tool.hatch.build.targets.wheel]
packages = ["tf_gnns"]

[tool.hatch.build.targets.sdist]
include = [
  "tf_gnns/**",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]
exclude = [
  ".venv/**",
  ".venv-*/**",
  "dist/**",
]

[tool.uv]
managed = true

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
python_files = ["test.py", "test_*.py", "*_test.py"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W"]

[tool.ruff.lint.pydocstyle]
convention = "google"
